# KeroRoute

./: .gitignore  LICENSE  Pipfile  README.en.md  README.md  build_device.py  capability_guard.py  command-list_example.yaml  commands-lists_example.yaml  completers.py  config-lists_example.yaml  configure.py  connect_device.py  console.py  executor.py  inventory_example.yaml  kero_logging.py  load_and_validate_yaml.py  login.py  main.py  message.py  netmiko_execution.py  output_logging.py  ping.py  pipenv-freeze.txt  prompt_utils.py  pyproject.toml  requirements-dev.txt  requirements.txt  secure_copy.py  show.py  sys_config.yaml  utils.py  uv-freeze.txt  workers.py
kero-data/: kero-AA.txt  kero-logo.txt
tests/: test_build_device.py  test_executor_build_device.py  test_get_commands_list_device_type.py  test_utils.py  test_validate_device_type_for_list.py
